# terastructure

./: AUTHORS  README  README.md  config.status  configure  configure.ac
autom4te.cache/: output.0  traces.0  traces.1
data/: oracle_beta.txt  oracle_theta.txt  output_theta.txt  run.sh  test.bed  test.bim  test.fam
pkg/: AUTHORS  NEWS  configure  configure.ac
pkg/scripts/: pop.pl  pop2.pl
pkg/scripts/data/: HGDP.txt  TGP_unrel.txt
pkg/src/: Makefile.am  Makefile.in  conv-theta.pl  fakephase.cc  fakephase.hh  general_KL.R  lib.hh  log.cc  main.cc  marginf.cc  marginf.hh  matrix.hh  nonconjinf.hh  popinf.cc  simulation_KL.R  snp.hh  snpsamplinga.hh  snpsamplingc.cc
pkg/src/old/: snpsampling.cc
scripts/: theta_to_distruct.py
scripts/data/: HGDP.txt  HGDP_text_to_tped.py  TGP.txt
src/: Makefile.am  Makefile.in  env.hh  kl.pl  main.cc  matrix.hh  popinf.hh  process-kl.pl  small_test_adx_svi_hol.R  snp.cc  snp.hh  snpsamplinga.cc  snpsamplingb.hh  snpsamplingd.cc  snpsamplinge.cc  snpsamplinge.hh  snpsamplingf.cc  thetas_KL.R
src/.deps/: log.Po  main.Po  marginf.Po  snp.Po  snpsamplinga.Po  snpsamplingb.Po  snpsamplingc.Po  snpsamplingd.Po  snpsamplinge.Po  snpsamplingf.Po  snpsamplingg.Po  thread.Po
src/old/: snpsampling.hh  snpsamplingb.cc  snpsamplingc.hh  snpsamplingd.hh  snpsamplingf.hh  snpsamplingg.cc  snpsamplingg.hh
