bin_PROGRAMS = terastructure
terastructure_SOURCES = env.hh snp.hh snp.cc matrix.hh main.cc log.cc log.hh lib.hh thread.hh thread.cc tsqueue.hh marginf.cc marginf.hh snpsamplinga.hh snpsamplinga.cc snpsamplingb.hh snpsamplingb.cc snpsamplingc.hh snpsamplingc.cc snpsamplingd.cc snpsamplingd.hh snpsamplinge.cc snpsamplinge.hh snpsamplingf.cc snpsamplingf.hh snpsamplingg.cc snpsamplingg.hh
#if DEBUG
#AM_CFLAGS = -g  -O0
#AM_CXXFLAGS = -g -O0
#endif
